# Sub0Reflect

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  cmake-install.bat  cmake-install.sh  configure
cmake/: CPM.cmake  FindFmt.cmake  FindGTest.cmake  FindVersion.cmake.cmake  GTest.cmake  GTest_ExternalAdd.cmake.in  Sub0ReflectConfig.cmake.in  Sub0buSConfig.cmake.in
examples/basic/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/sub0bus/: sub0bus.hpp
include/sub0reflect/: CMakeLists.txt  arity.hpp  as_tuple.hpp  cppReflect17.hpp  preprocessor.hpp  static_assert_equal.hpp  sub0reflect.hpp  type_name.hpp
include/sub0reflect/test/: CMakeLists.txt  cppReflect17_constexpr_test.cpp
tests/: CMakeLists.txt  sub0reflect_constexpr_test.cpp  test_constexpr.cpp  test_types.hpp
